<resources>
    <string name="app_name">part2</string>
    <string name="todo">button</string>
    <string name="coursec">Course Code:</string>
    <string name="coursen">Course Name:</string>
    <string name="lecturern">Lecturer Name:</string>
    <string name="name">Name</string>
    <string name="Createcourse">Create New Course</string>
    <string name="submit">Create</string>
    <string name="hint1">e.g. CO2124</string>
    <string name="hint2">Software Architecture II</string>
    <string name="hint3">Dr. Kehinde</string>

    <!-- Validation -->
    <string name="invalid_course_code">Invalid course code (e.g., AB1234)</string>
    <string name="all_fields_required">All fields are required</string>

    <!-- Student Hints -->
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_matric">Matriculation Number</string>
    <string name="save_button">Save</string>

    <!-- Accessibility Descriptions -->
    <string name="desc_student_name">Student name input</string>
    <string name="desc_student_email">Student email input</string>
    <string name="desc_student_username">Student username input (disabled)</string>

    <!-- Missing Strings from Layout Errors -->
    <string name="course_list">List of courses</string>
    <string name="title_create_course">Create a New Course</string>
    <string name="Studentname">Student Name</string>
    <string name="Studentemail">Student Email</string>
    <string name="Studentusername">Student Username</string>
    <string name="addstudent">Add Student</string>
    <string name="nostudents">No students have been enrolled</string>
    <string name="add_course">Create a new course</string>
    <string name="add_student">Add Student</string>
    <string name="studentName">Student Name</string>
    <string name="studentEmail">Email</string>
    <string name="hint4">Enter Student Name</string>
    <string name="hint5">Enter Email</string>
    <string name="hint6">e.g 21902345</string>
    <string name="courseCard">Course display</string>
    <string name="matric">Matric Number</string>
    <string name="matric_hint">Enter matric number</string>
    <string name="student_name_dec">studentname</string>
    <string name="student_email_dec">studentemail</string>
    <string name="student_matric_dec">studentmatric</string>
    <string name="removeBtn">Remove Student</string>
    <string name="lecturer_not_specified">Lecturer not specified</string>
    <string name="course_code_label">Course Code: %s</string>
    <string name="course_name_label">Course Name: %s</string>
    <string name="lecturer_label">Lecturer: %s</string>
    <string name="enroll">Enrolled Courses:</string>
    <string name="new_name">Enter New Name:</string>
    <string name="new_email">Enter New Email:</string>
    <string name="new_matric">Enter New Matric Number:</string>
    <string name="student_list_heading">Students</string>
    <string name="student_list_description">List of enrolled students</string>
    <string name="student_courses_desc">List of courses enrolled</string>

</resources>