<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.CreateCourseActivity">

    <!-- CardView container for form -->
<androidx.cardview.widget.CardView
android:id="@+id/form_card"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_margin="24dp"
app:cardCornerRadius="16dp"
app:cardElevation="8dp"
app:layout_constraintTop_toTopOf="parent"
app:layout_constraintBottom_toTopOf="@+id/button"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="373dp"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coursec"
            android:textColor="@color/warm_beige" />

        <EditText
            android:id="@+id/Coursecode"
            android:layout_width="188dp"
            android:layout_height="51dp"
            android:autofillHints="@string/hint1"
            android:background="@drawable/edittext_background"
            android:hint="@string/hint1"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/coursen"
            android:textColor="@color/warm_beige" />

        <EditText
            android:id="@+id/Coursename"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:autofillHints="@string/hint2"
            android:background="@drawable/edittext_background"
            android:hint="@string/hint2"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lecturern"
            android:textColor="@color/warm_beige" />

        <EditText
            android:id="@+id/Lecturername"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:autofillHints="@string/hint3"
            android:background="@drawable/edittext_background"
            android:hint="@string/hint3"
            android:inputType="text" />

        <TextView
            android:id="@+id/courseCodeErrorTextView"
            android:layout_width="194dp"
            android:layout_height="48dp"
            android:textColor="@android:color/holo_red_dark" /> <!-- Initially hidden -->
    </LinearLayout>
</androidx.cardview.widget.CardView>

    <!-- Submit Button -->
<Button
android:id="@+id/button"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/submit"
android:onClick="returnhome"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent"
android:layout_marginBottom="32dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
